--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Alfred-gyazo-workflow by nukosuke</title>
+    <title>Alfred Gyazo Workflow by nukosuke</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Alfred-gyazo-workflow</h1>
+        <h1>Alfred Gyazo Workflow</h1>
         <h2>AlfredでGyazoにアップロードした画像リンクを貼り付けるワークフロー</h2>
         <a href="https://github.com/nukosuke/alfred-gyazo-workflow" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -28,30 +28,44 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <p><a href="https://gyazo.com/26af8d7ec21795fa699232b71b7c8d50"><img src="https://i.gyazo.com/26af8d7ec21795fa699232b71b7c8d50.gif" alt="https://gyazo.com/26af8d7ec21795fa699232b71b7c8d50"></a></p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<h2>
+<a id="素早くgyazoにアップロードした画像リンクを貼り付ける" class="anchor" href="#%E7%B4%A0%E6%97%A9%E3%81%8Fgyazo%E3%81%AB%E3%82%A2%E3%83%83%E3%83%97%E3%83%AD%E3%83%BC%E3%83%89%E3%81%97%E3%81%9F%E7%94%BB%E5%83%8F%E3%83%AA%E3%83%B3%E3%82%AF%E3%82%92%E8%B2%BC%E3%82%8A%E4%BB%98%E3%81%91%E3%82%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>素早くGyazoにアップロードした画像リンクを貼り付ける</h2>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>以下のフォーマットで貼り付けられます。</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<ul>
+<li>Markdown</li>
+<li>HTML</li>
+<li>そのまま</li>
+</ul>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>選択した画像リンクはクリップボードにコピーされ、選択中のウィンドウがある場合は自動でペーストされます。</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h2>
+<a id="package-インストール" class="anchor" href="#package-%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><g-emoji alias="package" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4e6.png">📦</g-emoji> インストール</h2>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h2>
+<a id="初期設定" class="anchor" href="#%E5%88%9D%E6%9C%9F%E8%A8%AD%E5%AE%9A" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>初期設定</h2>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h4>
+<a id="gyazoでアプリケーションを登録しトークンを生成する" class="anchor" href="#gyazo%E3%81%A7%E3%82%A2%E3%83%97%E3%83%AA%E3%82%B1%E3%83%BC%E3%82%B7%E3%83%A7%E3%83%B3%E3%82%92%E7%99%BB%E9%8C%B2%E3%81%97%E3%83%88%E3%83%BC%E3%82%AF%E3%83%B3%E3%82%92%E7%94%9F%E6%88%90%E3%81%99%E3%82%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gyazoでアプリケーションを登録しトークンを生成する</h4>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h4>
+<a id="alfred-gyazo-workflowにトークンを保存する" class="anchor" href="#alfred-gyazo-workflow%E3%81%AB%E3%83%88%E3%83%BC%E3%82%AF%E3%83%B3%E3%82%92%E4%BF%9D%E5%AD%98%E3%81%99%E3%82%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Alfred Gyazo Workflowにトークンを保存する</h4>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>トークンは<code>~/.gyazo/config.json</code>に保存されます。</p>
+
+<h2>
+<a id="コンタクト" class="anchor" href="#%E3%82%B3%E3%83%B3%E3%82%BF%E3%82%AF%E3%83%88" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>コンタクト</h2>
+
+<p><a href="https://github.com/nukosuke" class="user-mention">@nukosuke</a></p>
+
+<h2>
+<a id="copyright-ライセンス" class="anchor" href="#copyright-%E3%83%A9%E3%82%A4%E3%82%BB%E3%83%B3%E3%82%B9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><g-emoji alias="copyright" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/00a9.png">©️</g-emoji> ライセンス</h2>
+
+<p>MIT</p>
         </section>
 
         <aside id="sidebar">
