--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="main-content">
-      <iframe src="https://www.youtube.com/embed/BL2majkI-YE" frameborder="0" allowfullscreen></iframe>
+      <iframe width="100%" src="https://www.youtube.com/embed/BL2majkI-YE" frameborder="0" allowfullscreen></iframe>
       
       <p><br><br><br></p>
 
