--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     </section>
 
     <section class="main-content">
-      <iframe width="100%" src="https://www.youtube.com/embed/BL2majkI-YE" frameborder="0" allowfullscreen></iframe>
-      
+      <div align="center">
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/BL2majkI-YE?rel=0" frameborder="0" allowfullscreen></iframe>
+      </div>
+        
       <p><br><br><br></p>
 
 <h2>
